# metamage

./: .env.example  .gitignore  LICENSE  PROJECT.md  PROJECT_REPORT.md  README.md  alembic.ini  pyproject.toml  sample.json  schema.mmd
alembic/: alembic_bridge.ini  alembic_ops.ini  env.py  env_bridge.py  env_ops.py
cli_agent/: README.md  __init__.py  agent.py  config.yaml  requirements.txt
data/: .gitignore  bans.csv  commander_archetypes.yaml  config_tournament.json  sets.csv
docs/: PROJECT_REPORT.md  VISUALIZATION_GUIDE.md  VISUALIZATION_GUIDE_v2.md  discord_description.md  mcp_tools.md  mtg_data_flow.mmd  scapeshift_scryfall.json  schema.mmd  social_clients_unified_architecture.md  socialbot_flow.mmd  socialbot_specs.md  tier_computation.md  tool-chaining-problem.md  tournament_rounds_sample.json
scripts/: __init__.py  backfill_session_sources.py  cleanup_orphaned_archetypes.py  create_oct_2025_db.py  export_archetypes.py  filter_last_month.py  find_channel.py  hello_twitter.py  hello_world.py  init_db.py  migrate.py  migrate_card_land.py  migrate_card_sets_colors.py  migrate_to_postgres.py  parse_mana_data.py  test_bsky.py  test_social_post.py  test_twitter_upload_debug.py  twitter_notifications_sandbox.py  twitter_oauth2_setup.py  twitter_reply_test.py  usage_stats.py
src/: main.py
ui/: .env.example  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
visualize/: README.md  analysis.R  colors.R  constants.R  db.R  get_marav.R  get_rolling_months.R  params.R  plot_matrix.R  plot_presence.R  plot_tiers.R  plots.R  (+4 more)
(+156 files in other folders)
