[project]
name = "brainstorm-db-struct"
version = "0.1.0"
description = "Magic: The Gathering Tournament Data Analysis MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "requests>=2.32.4",
    "fastmcp",
    "mcp-use>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters",
    "langgraph",
    "litellm>=1.75.4",
    "discord>=2.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
exclude = ["alembic"]
